fixing spacing

--- a/client/src/pages/Play/Play.css
+++ b/client/src/pages/Play/Play.css
@@ -125,7 +125,6 @@
 
 .score-container {
     margin-right: 20px;
-    line-height: 0.25;
 }
 
 .split-screen {
